Add Google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ disqus_short_name: usefuldude
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-49928757-1
 
 # Facebook Like
 facebook_like: false
